--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -54,46 +54,47 @@
             <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
 
-            <!--
-
-            A collapse example here:
-            <div id="exam" class="collapse">
-                Click to expand elements within the collapse div
-                </div>
-
-            -->
-
-            <!-- <HINT> If user is authenticated, show course exam with a list of question -->
-
-            <!-- <HINT> Each example will have many questions -->
-
-            <!-- <HINT> Each question will have many choices -->
 
 
-            <!-- <HINT> Create a form to collect the selected choices for all questions -->
-            <!-- <HINT> For each question choice, you may create a checkbox input like
-            <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}" ...>
-            -->
 
-            <!-- A choice submission form example
-            <form id="questionform" action="point to a submit view" method="post">
-                        ... for each question in the course ...
-                        <div class="card mt-1">
-                            <div class="card-header"><h5>{{ question.question_text}}</h5></div>
-                            {% csrf_token %}
-                            <div class="form-group">
-                               ... for each choice in the question ...
-                                <div class="form-check">
-                                    <label class="form-check-label">
-                                        <input type="checkbox" name="choice_{{choice.id}}"
-                                               class="form-check-input" id="{{choice.id}}"
-                                               value="{{choice.id}}">{{ choice.choice_text }}
-                                    </label>
-                                </div>
+            {% block content %}
+            <div class="container">
+                <h1>{{ course.title }}</h1>
+                <p>{{ course.description }}</p>
+                
+                {% if user.is_authenticated %}
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#examCollapse" aria-expanded="false" aria-controls="examCollapse">
+                    Show Exam
+                </button>
+
+                <div class="collapse mt-3" id="examCollapse">
+                    <form method="POST" action="{% url 'submit course.id %}">
+                    {% csrf_token %}
+                
+                    {% for question in course.questions.all %}
+                        <div class="card mt-3">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ question.question_content }}</h5>
+                            
+                            {% for choice in question.choices.all %}
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" name="selected_choices" value="{{ choice.id }}">
+                                <label class="form-check-label" for="choice{{ choice.id }}">
+                                {{ choice.choice_text }}
+                                </label>
                             </div>
+                            {% endfor %}
                         </div>
-                    <input class="btn btn-success btn-block" type="submit" value="Submit">
-            </form> -->
+                        </div>
+                    {% endfor %}
+                    
+                    <button class="btn btn-primary mt-3" type="submit">Submit Exam</button>
+                    </form>
+                </div>
+                {% endif %}
+            </div>
+            {% endblock %}
+
 
             <!--Check here to see more details Bootstrap checkbox
              https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
