--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -35,21 +35,49 @@
     </div>
 </nav>
 
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     {% if grade > 80 %}
     <div class="alert alert-success">
-       <!--HINT Display passed info -->
+       HINT Display passed info
     </div>
         {% else %}
         <div class="alert alert-danger">
-            <!--HINT Display failed info -->
+            HINT Display failed info
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
+            HINT Display exam results
         </div>
+</div> -->
+<div class="container-fluid">
+    {% if grade > 80 %}
+    <div class="alert alert-success">
+      Congratulations! You have passed the exam.
     </div>
+    {% else %}
+    <div class="alert alert-danger">
+      Unfortunately, you have failed the exam.
+    </div>
+    <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
+    {% endif %}
+    
+    <div class="card-columns-vertical mt-1">
+      <h5 class="">Exam results</h5>
+      {% for question, is_correct in question_results %}
+      <div class="card mt-3">
+        <div class="card-body">
+          <h5 class="card-title">{{ question.question_content }}</h5>
+          {% if is_correct %}
+          <p class="text-success">Correct</p>
+          {% else %}
+          <p class="text-danger">Incorrect</p>
+          {% endif %}
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
 </body>
 </html>
